--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="author" content="Stacie Poindexter">
   
   <link rel="stylesheet" href="reset.css">
+  
+  <title>Stacie's Portfolio</title>
+  
 </head>
 
 <body>
