--- a/index.html
+++ b/index.html
@@ -8,13 +8,31 @@
   <meta name="author" content="Stacie Poindexter">
   
   <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="main.css">
   
   <title>Stacie's Portfolio</title>
   
 </head>
 
 <body>
-
+<!--HEADER-->
+  <div id="header">
+    <div class="wrap">
+      <!---->
+      <div class="logo">
+        <a href="#">Stacie</a>
+      </div>
+      <!---->
+      <ul class="menu">
+        <li><a href="#">Link One</a></li>
+        <li><a href="#">Link Two</a></li>
+        <li><a href="#">Link Three</a></li>
+        <li><a href="#">Link Four</a></li>
+        <li><a href="#">Link Five</a></li>
+      </ul>
+      <!---->
+    </div>
+  </div>
 </body>
 
 </html>
