--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Quicksand:700">
   
   <title>Stacie's Portfolio</title>
   
