--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
       <!---->
     </div>
   </div>
+<!--FOOTER-->
+  <div id="footer">
+    <div class="wrap">
+      &copy; 2017 Stacie Poindexter. All Rights Reserved.
+    </div>
+  </div>
 </body>
 
 </html>
