--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <li><a href="#">Link One</a></li>
     <li><a href="#">Link Two</a></li>
     <li><a href="#">Link Three</a></li>
-    <li><a href="#">Link Four</a></li>
-    <li><a href="#">Link Five</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="#">Contact</a></li>
   </ul>
   <!---->
   </div>
