--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Quicksand:700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Monoton">
   
   <title>About Me</title>
   
@@ -28,8 +28,8 @@
     <li><a href="#">Link One</a></li>
     <li><a href="#">Link Two</a></li>
     <li><a href="#">Link Three</a></li>
-    <li><a href="#">Link Four</a></li>
-    <li><a href="#">Link Five</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="#">Contact</a></li>
   </ul>
   <!---->
   </div>
