--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="wrap">
   <!---->
   <div class="logo">
-    <a href="#">Stacie</a>
+    <a href="index.html">Stacie</a>
   </div>
   <!---->
   <ul class="menu">
