--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <li><a href="#">Link One</a></li>
     <li><a href="#">Link Two</a></li>
     <li><a href="#">Link Three</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="about.html" class="active">About</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
   <!---->
