--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <li><a href="#">Link Two</a></li>
     <li><a href="#">Link Three</a></li>
     <li><a href="about.html" class="active">About</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="contact.html">Contact</a></li>
   </ul>
   <!---->
   </div>
