--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
   
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Monoton">
+	<link rel="stylesheet" href="about.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Monoton">
   
   <title>About Me</title>
   
@@ -32,13 +33,6 @@
     <li><a href="contact.html">Contact</a></li>
   </ul>
   <!---->
-  </div>
-</div>
-  
-<!--FOOTER-->
-<div id="footer">
-  <div class="wrap">
-    &copy; 2017 Stacie Poindexter. All Rights Reserved.
   </div>
 </div>
   
