--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Monoton">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Monoton">
   
   <title>Stacie's Portfolio</title>
   
@@ -34,12 +34,16 @@
   <!---->
   </div>
 </div>
-  
-<!--FOOTER-->
-<div id="footer">
-  <div class="wrap">
-    &copy; 2017 Stacie Poindexter. All Rights Reserved.
-  </div>
+
+<!--BODY-->
+<div id="body-wrap">
+<div>
+	<!---->
+	<div class="wide-left">
+	<h1>Contact Me</h1>
+	</div>
+	<!---->
+</div>
 </div>
   
 </body>
