--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Monoton">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Monoton">
   
   <title>Contact</title>
   
@@ -18,30 +18,42 @@
 <body>
 <!--HEADER-->  
 <div id="header">
-<div class="wrap">
-  <!---->
-  <div class="logo">
-    <a href="index.html">Stacie</a>
-  </div>
-  <!---->
-  <ul class="menu">
-    <li><a href="#">Link One</a></li>
-    <li><a href="#">Link Two</a></li>
-    <li><a href="#">Link Three</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html" class="active">Contact</a></li>
-  </ul>
-  <!---->
-  </div>
-</div>
-  
-<!--FOOTER-->
-<div id="footer">
   <div class="wrap">
-    &copy; 2017 Stacie Poindexter. All Rights Reserved.
+    <!---->
+    <div class="logo">
+      <a rel="nofollow" rel="noreferrer"href="index.html">Stacie</a>
+    </div>
+    <!---->
+    <ul class="menu">
+      <li><a rel="nofollow" rel="noreferrer"href="#">Link One</a></li>
+      <li><a rel="nofollow" rel="noreferrer"href="#">Link Two</a></li>
+      <li><a rel="nofollow" rel="noreferrer"href="#">Link Three</a></li>
+      <li><a rel="nofollow" rel="noreferrer"href="about.html">About</a></li>
+      <li><a rel="nofollow" rel="noreferrer"href="contact.html" class="active">Contact</a></li>
+    </ul>
+    <!---->
   </div>
 </div>
-  
+
+<!--BODY-->
+<div id="body-wrap">
+  <div>
+    <!---->
+    <div class="wide-left">
+      <h1>Get In Touch</h1>
+      <!---->
+      <div class="container contact">
+        <h2>Contact Me</h2>
+        <p>I promise, I won't bite!</p>
+        <!---->
+        </div>
+      </div>
+      <!---->
+    </div>
+    <!---->
+  </div>
+</div>
+
 </body>
 
 </html>
