--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
   
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Monoton">
+  <link href="https://fonts.googleapis.com/css?family=Barrio|Roboto:400,500,700" rel="stylesheet">
   
   <title>Stacie's Portfolio</title>
   
 </head>
 
 <body>
-<!--HEADER-->  
-<div id="header">
-<div class="wrap">
-  <!---->
-  <div class="logo">
-    <a href="index.html">Stacie</a>
-  </div>
-  <!---->
-  <ul class="menu">
-    <li><a href="#">Link One</a></li>
-    <li><a href="#">Link Two</a></li>
-    <li><a href="#">Link Three</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-  <!---->
+<!--BORDERS-->
+<div id="top"></div>
+<div id="bottom"></div>
+<div id="left"></div>
+<div id="right"></div>
+  
+<div id="page">
+  <div class="header">
+    <h1>Stacie</h1>
+    <ul class="menu">
+      <li><a href="#" class="home">home</a></li>
+      <li><a href="#" class="work">work</a></li>
+      <li><a href="#" class="about">about</a></li>
+      <li><a href="#" class="contact">contact</a></li>
+      <li><a href="#" class="social">social</a></li>
+    </ul>
   </div>
 </div>
   
