--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
 <div id="page">
   <div class="header">
-    <h1>Stacie</h1>
+    <a href="#"><h1>Stacie</h1></a>
     <ul class="menu">
       <li><a href="#" class="home">home</a></li>
       <li><a href="#" class="work">work</a></li>
@@ -32,6 +32,104 @@
       <li><a href="#" class="contact">contact</a></li>
       <li><a href="#" class="social">social</a></li>
     </ul>
+  </div>
+  <div class="content">
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
+    <div class="box">
+      <a href="#">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=80&txt=placeholder&w=600&h=500" alt="work">
+      <div class="desc">
+        description
+      </div>
+      </a>
+    </div>
   </div>
 </div>
   
