--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
 <div id="page">
   <div class="header">
-    <a href="#"><h1>Stacie</h1></a>
+    <a href="index.html"><h1>Stacie</h1></a>
     <ul class="menu">
       <li><a href="#" class="home">home</a></li>
       <li><a href="#" class="work">work</a></li>
