--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="header">
     <a href="index.html"><h1>Stacie</h1></a>
     <ul class="menu">
-      <li><a href="#" class="home">home</a></li>
+      <li><a href="index.html" class="home">home</a></li>
       <li><a href="#" class="work">work</a></li>
       <li><a href="#" class="about">about</a></li>
       <li><a href="#" class="contact">contact</a></li>
